fjern alle frameborder-attributter

--- a/layouts/shortcodes/bareegil.html
+++ b/layouts/shortcodes/bareegil.html
@@ -1,4 +1,4 @@
-<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/-2YORpgRcN0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/-2YORpgRcN0" style="border:0;" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <br><br>
 
-<iframe allow="autoplay *; encrypted-media *;" frameborder="0" height="150" style="width:100%;max-width:660px;overflow:hidden;background:transparent;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/us/album/ved-r%C3%B8rende-norske-rett-skrivnings-regler/1090475484?i=1090475487"></iframe>
+<iframe allow="autoplay *; encrypted-media *;" style="border:0;" height="150" style="width:100%;max-width:660px;overflow:hidden;background:transparent;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/us/album/ved-r%C3%B8rende-norske-rett-skrivnings-regler/1090475484?i=1090475487"></iframe>
