--- a/layouts/shortcodes/forsidekort.html
+++ b/layouts/shortcodes/forsidekort.html
@@ -19,7 +19,7 @@
     <li class="list-group-item"><b>Postadresse:</b><br>Petter Holstad<br>Ivan Bjørndals gate 6<br>0472 Oslo</li>
   </ul>
   <div class="card-body">
-    <a href="#" class="card-link"><a href="../kontaktinfo"><button type="button" class="btn btn-primary btn-sm">Se fullstendig kontaktinfo</button></a></a>
+    <a href="../kontaktinfo" class="btn btn-primary btn-sm">Se fullstendig kontaktinfo</a>
   </div>
 </div>
 
@@ -30,7 +30,7 @@
     <p class="card-text">Hvis du enten du bare skal hente noe på Finn.no, eller du kommer på overnattingsbesøk, finner du all informasjon om alle mulige transportmidler til meg på sidene under. </p>
   </div>
   <ul class="list-group list-group-flush">
-    <li class="list-group-item"><a href="visit/kartogkompass">Kart og kompass</b></a></li>    
+    <li class="list-group-item"><a href="visit/kartogkompass">Kart og kompass</a></li>    
     <li class="list-group-item"><a href="visit/hjulinger">Gå, sykle eller sparkesykle</a></li>
     <li class="list-group-item"><a href="visit/kollektivt">Kollektivtrafikk</a></li>
     <li class="list-group-item"><a href="visit/motor">Bil eller drosje</a></li>
