--- a/layouts/shortcodes/egenrisk.html
+++ b/layouts/shortcodes/egenrisk.html
@@ -1,4 +1,8 @@
-<div class="alert alert-dark" role="alert">
-<center><strong>Før du går videre</strong><br>
-Alt som står i denne artikkelen er basert på min erfaring og mine personlige meninger knytta til dette temaet. Det kan hende det er feil eller unøyaktigheter i teksten, og du gjennomfører eventuelle steg på egen risiko. Hvis du har spørsmål eller tilbakemeldinger, kan du <a href="../kontaktinfo">kontakte&nbsp;meg</a>.</center>
+<div class="alert alert-dark text-center" role="alert">
+  <strong>Før du går videre</strong>
+  <br>
+  Alt som står i denne artikkelen er basert på min erfaring og mine personlige meninger knytta
+  til dette temaet. Det kan hende det er feil eller unøyaktigheter i teksten, og du gjennomfører
+  eventuelle steg på egen risiko. Hvis du har spørsmål eller tilbakemeldinger, kan du
+  <a href="../kontaktinfo">kontakte&nbsp;meg</a>.
 </div>
