Ingen <button> inni <a>

--- a/layouts/shortcodes/knapp-kontaktinfo.html
+++ b/layouts/shortcodes/knapp-kontaktinfo.html
@@ -1,1 +1,1 @@
-<a href="../kontaktinfo"><button type="button" class="btn btn-primary btn-sm">Se fullstendig kontaktinfo</button></a>
+<a href="../kontaktinfo" class="btn btn-primary btn-sm">Se fullstendig kontaktinfo</a>
