--- a/layouts/shortcodes/knapp-veibeskrivelse.html
+++ b/layouts/shortcodes/knapp-veibeskrivelse.html
@@ -1,1 +1,1 @@
-<a href="../visitt"><button type="button" class="btn btn-info btn-sm">Få veibeskrivelse</button></a>
+<a href="../visitt" class="btn btn-info btn-sm">Få veibeskrivelse</a>
