--- a/layouts/shortcodes/festskjema.html
+++ b/layouts/shortcodes/festskjema.html
@@ -7,16 +7,16 @@ value="http://pdog.no/skjemasvar">
 
 <div class="input-group mb-3">
   <div class="input-group-prepend">
-    <span class="input-group-text" id="basic-addon1">Din e-postadresse</span>
+    <span class="input-group-text" id="epost-addon">Din e-postadresse</span>
   </div>
-  <input type="text" name="epost" class="form-control" placeholder="eksempel@pdog.no" aria-label="Username" aria-describedby="basic-addon1">
+  <input type="text" name="epost" class="form-control" placeholder="eksempel@pdog.no" aria-label="Username" aria-describedby="epost-addon">
 </div>
 
 <div class="input-group mb-3">
   <div class="input-group-prepend">
-    <span class="input-group-text" id="basic-addon1">Når kommer du og hvem tar du med deg?</span>
+    <span class="input-group-text" id="tid-gjest-addon">Når kommer du og hvem tar du med deg?</span>
   </div>
-  <input type="text" name="epost" class="form-control" placeholder="Fredag, tar med meg bikkja!" aria-label="Username" aria-describedby="basic-addon1">
+  <input type="text" name="epost" class="form-control" placeholder="Fredag, tar med meg bikkja!" aria-label="Username" aria-describedby="tid-gjest-addon">
 </div>
-  <button type=submit class="btn btn-primary">Let's Party!</button>
+  <button type="submit" class="btn btn-primary">Let's Party!</button>
 </form>
