Fjern rel-attributt på lenker uten target _blank

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -10,9 +10,9 @@
   Sist oppdatert {{ .Date }}. Alt innhold er © Petter Holstad. Nettsiden er
   utviklet av Stig Johan Berggren.
   <br>
-  <a href="../../innspill" rel="noreferrer noopener">Innspill og bidrag</a> • 
-  <a href="../../utvikler" rel="noreferrer noopener">Utvikler</a> • 
-  <a href="../../personvern" rel="noreferrer noopener">Personvern</a> • 
-  <a href="../../sidetre" rel="noreferrer noopener">Sidetre</a>
+  <a href="../../innspill">Innspill og bidrag</a> •
+  <a href="../../utvikler">Utvikler</a> •
+  <a href="../../personvern">Personvern</a> •
+  <a href="../../sidetre">Sidetre</a>
 </p>
 {{ end }}
