--- a/layouts/shortcodes/survey.html
+++ b/layouts/shortcodes/survey.html
@@ -2,9 +2,6 @@
     src="https://docs.google.com/forms/d/e/1FAIpQLSf7opHkg6IxKovsQqFy9g3XsAtxCYHIlEl3pI_lrqhVkTlTpQ/viewform?embedded=true"
     width="600"
     height="500"
-    frameborder="0"
-    marginheight="0"
-    marginwidth="0"
+    style="border:0;"
 >
-    Laster inn …
 </iframe>
