--- a/layouts/shortcodes/bareegil.html
+++ b/layouts/shortcodes/bareegil.html
@@ -2,7 +2,6 @@
     width="560"
     height="315"
     src="https://www.youtube-nocookie.com/embed/-2YORpgRcN0"
-    style="border:0;"
     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
     allowfullscreen
 >
@@ -11,7 +10,7 @@
 <iframe
     allow="autoplay *; encrypted-media *;"
     height="150"
-    style="border:0;width:100%;max-width:660px;overflow:hidden;background:transparent;"
+    style="width:100%;max-width:660px;overflow:hidden;background:transparent;"
     sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation"
     src="https://embed.music.apple.com/us/album/ved-r%C3%B8rende-norske-rett-skrivnings-regler/1090475484?i=1090475487"
 >
