--- a/layouts/shortcodes/underarbeid.html
+++ b/layouts/shortcodes/underarbeid.html
@@ -1,6 +1,9 @@
 <div class="alert alert-warning alert-dismissible fade show" role="alert"><b>Du har mye å glede deg til!</b><br>
-Akkurat denne undersiden er jeg ikke helt ferdig med. Innholdet er enten ikke skrevet ferdig, eller innholdet mangler faktasjekk, korrektur, eksterne lenker eller mer. Vil du bidra - i så fall kan du <a href="../innspill" class="alert-link">gå til nettsiden for innspill og tilbakemeldinger</a>.
+  Akkurat denne undersiden er jeg ikke helt ferdig med. Innholdet er enten ikke skrevet ferdig,
+  eller innholdet mangler faktasjekk, korrektur, eksterne lenker eller mer. Vil du bidra - i så
+  fall kan du
+  <a href="../innspill" class="alert-link">gå til nettsiden for innspill og tilbakemeldinger</a>.
   <button type="button" class="close" data-dismiss="alert" aria-label="Close">
     <span aria-hidden="true">&times;</span>
   </button>
-  </div>
+</div>
