--- a/layouts/shortcodes/forsidekort.html
+++ b/layouts/shortcodes/forsidekort.html
@@ -2,8 +2,8 @@
 <div class="card" style="width: 18rem;">
   <img class="card-img-top" src="../petter2.jpeg" alt="Card image cap">
   <div class="card-body">
-    <h5 class="card-title">Velkommen!</h5>
-    <p class="card-text">Jeg heter Petter (kallenavn P-Dog) og dette er min personlige nettside. Du finner informasjon om hvordan du kontakter meg, reisebeskrivelser til boligen min og informasjon om enkeltpersonsforetaket mitt. Jeg skriver også noen artikler om teknologi. I tillegg legger jeg ut andre ting jeg har samlet opp gjennom årene.</p>
+    <h5 class="card-title">Velkommen</h5>
+    <p class="card-text">Jeg heter Petter (kallenavn P-Dog) og dette er min personlige nettside. Du finner informasjon om hvordan du kontakter meg, reisebeskrivelser til boligen min og informasjon om enkeltpersonsforetaket mitt. Jeg skriver også noen artikler om teknologi. I tillegg legger jeg ut andre ting jeg har samlet opp gjennom årene.</p><p><h7>petterholstad.no • pdog.no • p-dog.no • heltogholdent.no</h7></p>
   </div>
 </div>
 
