--- a/layouts/shortcodes/hhhbilde.html
+++ b/layouts/shortcodes/hhhbilde.html
@@ -2,7 +2,7 @@
 	class="figure float-right"
 	align="right">
 <a href="../hhh.png" target="_blank">
-<img src="../hhh.png" width="270px" class="rounded" alt="Logoen til Helt og Holdent"></a>
+<img src="../hhh.png" width="270" class="rounded" alt="Logoen til Helt og Holdent"></a>
 <figcaption 
 	class="figure-caption">
 Logo utformet av Øyvind Kind Robertsen.</figcaption>
