--- a/layouts/shortcodes/hhhbilde.html
+++ b/layouts/shortcodes/hhhbilde.html
@@ -1,6 +1,5 @@
 <figure 
-	class="figure float-right"
-	align="right">
+	class="figure float-right">
 <a href="../hhh.png" target="_blank">
 <img src="../hhh.png" width="270" class="rounded" alt="Logoen til Helt og Holdent"></a>
 <figcaption 
