--- a/layouts/404.html
+++ b/layouts/404.html
@@ -12,10 +12,9 @@
   Sist oppdatert {{ .Date }}. Alt innhold er © Petter Holstad. Nettsiden er
   utviklet av Stig Johan Berggren.
   <br>
-<a href="innspill" target="_blank" rel="noreferrer noopener">Innspill og bidrag</a> • 
-  <a href="utvikler" target="_blank" rel="noreferrer noopener">Utvikler</a>
-  • 
-  <a href="personvern" target="_blank" rel="noreferrer noopener">Personvern</a> • 
-  <a href="sidetre" target="_blank" rel="noreferrer noopener">Sidetre</a> • <a href="../../om" target="_blank" rel="noreferrer noopener">Om</a>
+  <a href="../../innspill" rel="noreferrer noopener">Innspill og bidrag</a> • 
+  <a href="../../utvikler" rel="noreferrer noopener">Utvikler</a> • 
+  <a href="../../personvern" rel="noreferrer noopener">Personvern</a> • 
+  <a href="../../sidetre" rel="noreferrer noopener">Sidetre</a>
 </p>
 {{ end }}
