Endringer knytta til ny event: 9/11 Memorial Event
- Opprettet nytt side.
- La til et bilde til siden, og la til en shortcode for å få bildet justert riktig på siden.
- Endret festskjemaet til å bli en generell påmelding for alle.

--- a/layouts/shortcodes/festskjema.html
+++ b/layouts/shortcodes/festskjema.html
@@ -14,9 +14,9 @@ value="http://pdog.no/skjemasvar">
 
 <div class="input-group mb-3">
   <div class="input-group-prepend">
-    <span class="input-group-text" id="tid-gjest-addon">Når kommer du og hvem tar du med deg?</span>
+    <span class="input-group-text" id="tid-gjest-addon">Kommentar:</span>
   </div>
-  <input type="text" name="epost" class="form-control" placeholder="Fredag, tar med meg bikkja!" aria-label="Username" aria-describedby="tid-gjest-addon">
+  <input type="text" name="epost" class="form-control" placeholder="" aria-label="Username" aria-describedby="tid-gjest-addon">
 </div>
-  <button type="submit" class="btn btn-primary">Let's Party!</button>
+  <button type="submit" class="btn btn-primary">Jeg er med!</button>
 </form>
