--- a/layouts/shortcodes/911bilde.html
+++ b/layouts/shortcodes/911bilde.html
@@ -3,5 +3,5 @@
 <a href="../911.jpg" target="_blank">
 <img src="../911.jpg" width="400" class="rounded" alt="Bildet viser World Trade Center"></a>
 <figcaption 
-	class="figure-caption" width="400"><i>For mer informasjon om bildet, se nederst.</i></figcaption>
+	class="figure-caption"><i>For mer informasjon om bildet, se nederst.</i></figcaption>
 </figure>
