--- a/layouts/shortcodes/mymaps.html
+++ b/layouts/shortcodes/mymaps.html
@@ -1,6 +1,7 @@
-<iframe
-  src="https://www.google.com/maps/d/embed?mid={{ .Get 0 }}"
-  width="640"
-  height="480"
->
-</iframe>
+<div class="embed-responsive embed-responsive-4by3">
+  <iframe
+    class="embed-responsive-item"
+    src="https://www.google.com/maps/d/embed?mid={{ .Get 0 }}"
+  >
+  </iframe>
+</div>
