Samkjør de to figure-shortcodene

--- a/layouts/shortcodes/911bilde.html
+++ b/layouts/shortcodes/911bilde.html
@@ -1,5 +1,6 @@
 <figure class="figure float-right">
-	<a href="911.jpg" target="_blank">
-		<img src="911.jpg" width="400" class="rounded" alt="Bildet viser World Trade Center"></a>
-	<figcaption class="figure-caption"><i>For mer informasjon om bildet, se nederst.</i></figcaption>
+  <a href="911.jpg" target="_blank">
+	<img src="911.jpg" width="400" class="rounded" alt="Bildet viser World Trade Center">
+  </a>
+  <figcaption class="figure-caption">For mer informasjon om bildet, se nederst.</figcaption>
 </figure>
