Innfør page bundles for sider med egne bilder (#18)
* Flytt sider med bilder til page bundles

* Page bundles kontaktinfo hjulinger lanseringsfest

* Samkjør de to figure-shortcodene

* Fjern dupliserte filer

* Blanke linjer rundt avsnitt

Co-authored-by: Petter Holstad <67736167+petterhol@users.noreply.github.com>

--- a/layouts/shortcodes/hhhbilde.html
+++ b/layouts/shortcodes/hhhbilde.html
@@ -1,8 +1,5 @@
-<figure 
-	class="figure float-right">
-<a href="../hhh.png" target="_blank">
-<img src="../hhh.png" width="270" class="rounded" alt="Logoen til Helt og Holdent"></a>
-<figcaption 
-	class="figure-caption">
-Logo utformet av Øyvind Kind Robertsen.</figcaption>
+<figure class="figure float-right">
+  <a href="hhh.png" target="_blank">
+    <img src="hhh.png" width="270" class="rounded" alt="Logoen til Helt og Holdent"></a>
+  <figcaption class="figure-caption">Logo utformet av Øyvind Kind Robertsen.</figcaption>
 </figure>
