Ny side - silicon valley
Denne commit legger til en helt ny side: Silicon Valley og omegn, som er en slags reisebeskrivelse fra en tur jeg hadde i april 2019. Dette gjør også at kategorien "kart" blir for snevert, så alt nå navngis denne til "Kart og reiser". Dette er mitt første forsøk på en page bundle. I tillegg til index.md-filen, legger jeg ved en del bildefiler. Jeg har også lagt til en shortcode hvis funksjon er å vise alle bildelisenser.

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -8,7 +8,7 @@
 
 {{ define "footer" }}
 <p>
-  Sist oppdatert {{ .Date }}. Alt innhold er © Petter Holstad. Nettsiden er
+  Sist oppdatert {{ .Date }}. <br>Alt innhold er © Petter Holstad. Nettsiden er
   utviklet av Stig Johan Berggren.
   <br>
   <a href="../../innspill">Innspill og bidrag</a> •
