--- a/layouts/shortcodes/bildecredits-sv.html
+++ b/layouts/shortcodes/bildecredits-sv.html
@@ -1,5 +1,5 @@
 <p>
-  <a class="btn btn-link" data-toggle="collapse" href="#bildelisenser" role="button" aria-expanded="false" aria-controls="collapseExample">
+  <a class="btn btn-link" data-toggle="collapse" href="#bildelisenser" role="button" aria-expanded="false" aria-controls="bildelisenser">
     Informasjon om bildelisenser brukt på denne siden
   </a>
 </p>
@@ -11,4 +11,5 @@
 <p>Bildet fra Facebook-hovedkontoret er tatt av Minette Lontsie, lisensisert under Creative Commons Attribution-Share Alike 4.0 International lisence. Se <a href="https://commons.wikimedia.org/wiki/File:Facebook_Headquarters.jpg">Commons</a>.</p>
 <p>Bildet fra Musée Mécanique er tatt av User:Piotrus, lisensisert under  Creative Commons Attribution-Share Alike 3.0 Unported, 2.5 Generic, 2.0 Generic and 1.0 Generic. Se <a href="https://commons.wikimedia.org/wiki/File:Mus%C3%A9e_M%C3%A9canique_003.JPG">Commons</a>.</p>
 <p>Øvrige bilder er mitt eget verk og er lisensiert under <a href="https://creativecommons.org/licenses/by-sa/4.0/deed.en">Creative Commons Attribution ShareAlike 4.0 license</a>.</p>  
+</div>
 </div>
