--- a/layouts/shortcodes/forsidekort.html
+++ b/layouts/shortcodes/forsidekort.html
@@ -30,10 +30,10 @@
     <p class="card-text">Hvis du enten du bare skal hente noe på Finn.no, eller du kommer på overnattingsbesøk, finner du all informasjon om alle mulige transportmidler til meg på sidene under. </p>
   </div>
   <ul class="list-group list-group-flush">
-    <li class="list-group-item"><a href="visit/kartogkompass">Kart og kompass</a></li>    
-    <li class="list-group-item"><a href="visit/hjulinger">Gå, sykle eller sparkesykle</a></li>
-    <li class="list-group-item"><a href="visit/kollektivt">Kollektivtrafikk</a></li>
-    <li class="list-group-item"><a href="visit/motor">Bil eller drosje</a></li>
+    <li class="list-group-item"><a href="visitt/kartogkompass">Kart og kompass</a></li>    
+    <li class="list-group-item"><a href="visitt/hjulinger">Gå, sykle eller sparkesykle</a></li>
+    <li class="list-group-item"><a href="visitt/kollektivt">Kollektivtrafikk</a></li>
+    <li class="list-group-item"><a href="visitt/motor">Bil eller drosje</a></li>
   </ul>
 </div>
 </div>
