--- a/layouts/shortcodes/holdeplasser.html
+++ b/layouts/shortcodes/holdeplasser.html
@@ -33,6 +33,19 @@
 </div>
       </td>
     </tr>
+        <tr>
+      <td>Sagene</td>
+      <td>Kun om du må ta 34-bussen</td>
+      <td>
+        <div class="d-flex flex-wrap">
+          {{ partial "rute.html" (dict "routeNo" "20" "routeType" "bybuss") }}
+          {{ partial "rute.html" (dict "routeNo" "37" "routeType" "bybuss") }}
+          {{ partial "rute.html" (dict "routeNo" "34" "routeType" "bybuss") }}
+          {{ partial "rute.html" (dict "routeNo" "54" "routeType" "bybuss") }}
+          {{ partial "rute.html" (dict "routeNo" "20" "routeType" "nattbuss") }}
+</div>
+      </td>
+    </tr>
     <tr>
       <td>Torshovparken</td>
       <td>Kun hvis du må ta 30-bussen</td>
