Korrigering av callout
Gjort callout enda bedre ved å fjerne den hardkodede overskriften

--- a/layouts/shortcodes/callout.html
+++ b/layouts/shortcodes/callout.html
@@ -1,1 +1,1 @@
-<div class="callout callout-warning"><h4>Test</h4>{{ .Inner }}</div>
+<div class="callout callout-warning">{{ .Inner | markdownify }}</div>
