--- a/layouts/shortcodes/festskjema.html
+++ b/layouts/shortcodes/festskjema.html
@@ -1,4 +1,4 @@
-<form method="POST" action="https://www.domeneshop.no/cgi-bin/mailto.cgi" accept-charset="ISO-8859-1">
+<form method="POST" action="https://www.domeneshop.no/cgi-bin/mailto.cgi" accept-charset="utf-8">
 <input type="hidden" name="_to" value="feedback@pdog.no">
 <input type="hidden" name="_from" value="feedback@pdog.no">
 <input type="hidden" name="_subject" value="Påmelding lanseringsfest">
