--- a/static/style.css
+++ b/static/style.css
@@ -44,32 +44,67 @@ iframe {
   background: #1D155B;
 }
 
+.streikebuss {
+  background: #726F6E;
+  text-decoration: line-through;
+}
+
 .callout {
-  padding: 20px;
+  padding: 10px;
   margin: 20px 0;
   border: 1px solid #eee;
   border-left-width: 5px;
   border-radius: 3px;
-  h4 {
-    margin-top: 0;
-    margin-bottom: 5px;
-  }
-  p:last-child {
-    margin-bottom: 0;
-
-  }
-  code {
-    border-radius: 3px;
-  }
-  & + .bs-callout {
-    margin-top: -5px;
-  }
 }
-@each $name,$color in (default,#777),(primary,#428bca),(success,#5cb85c),(danger,#d9534f),(warning,#f0ad4e),(info,#5bc0de), (bdc,#29527a) {
-  .callout-#{$name} {
-    border-left-color: $color;
-    h4 {
-      color: $color;
-    }
-  }
+
+.callout h4 {
+  margin-top: 0;
+  margin-bottom: 5px;
+}
+  
+.callout p:last-child {
+  margin-bottom: 0;
+}
+  
+.callout code {
+  border-radius: 3px;
+}
+
+.callout & + .bs-callout {
+  margin-top: -5px;
+}
+
+.callout-default {
+  border-left-color: #777;
+}
+.callout-default h4 {
+  color: #777;
+}
+
+.callout-primary {
+  border-left-color: #428bca;
+}
+.callout-primary h4 {
+  color: #428bca;
+}
+
+.callout-success {
+  border-left-color: #5cb85c;
+}
+.callout-success h4 {
+  color: #5cb85c;
+}
+
+.callout-danger {
+  border-left-color: #d9534f;
+}
+.callout-danger h4 {
+  color: #d9534f;
+}
+
+.callout-warning {
+  border-left-color: #f0ad4e;
+}
+.callout-warning h4 {
+  color: #f0ad4e;
 }
