--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -8,12 +8,6 @@
 
 {{ define "footer" }}
 <p>
-  Sist oppdatert {{ .Date }}. Alt innhold er © Petter Holstad. Nettsiden er
-  utviklet av Stig Johan Berggren.
-  <br>
-  <a href="../../innspill">Innspill og bidrag</a> •
-  <a href="../../utvikler">Utvikler</a> •
-  <a href="../../personvern">Personvern</a> •
-  <a href="../../sidetre">Sidetre</a>
+   Sist oppdatert {{ .Date }}. Nettsiden er utviklet av Stig Johan Berggren. Innhold lisensiert under CC. <a href="../../om">Les mer</a>.
 </p>
 {{ end }}
