--- a/layouts/shortcodes/forsidekort.html
+++ b/layouts/shortcodes/forsidekort.html
@@ -1,6 +1,6 @@
 <div class="card-deck">
 <div class="card" style="width: 18rem;">
-  <img class="card-img-top" src="petter2.jpeg" alt="Card image cap">
+  <img class="card-img-top" src="_index/petter2.jpeg" alt="Card image cap">
   <div class="card-body">
     <h5 class="card-title">Velkommen</h5>
     <p class="card-text">Jeg heter Petter (kallenavn P-Dog) og dette er min personlige nettside. Du finner informasjon om hvordan du kontakter meg, reisebeskrivelser til boligen min og informasjon om enkeltpersonsforetaket mitt. Jeg skriver også noen artikler om teknologi. I tillegg legger jeg ut andre ting jeg har samlet opp gjennom årene.</p>
@@ -8,7 +8,7 @@
 </div>
 
 <div class="card" style="width: 18rem;">
-  <img class="card-img-top" src="fasttelefon.jpg" alt="Card image cap">
+  <img class="card-img-top" src="_index/fasttelefon.jpg" alt="Card image cap">
   <div class="card-body">
     <h5 class="card-title">Kontaktinformasjon</h5>
     <p class="card-text">Ta gjerne kontakt hvis du lurer på noe!</p>
@@ -24,7 +24,7 @@
 </div>
 
 <div class="card" style="width: 18rem;">
-  <img class="card-img-top" src="blokka.jpg" alt="Card image cap">
+  <img class="card-img-top" src="_index/blokka.jpg" alt="Card image cap">
   <div class="card-body">
     <h5 class="card-title">Besøk</h5>
     <p class="card-text">Hvis du enten du bare skal hente noe på Finn.no, eller du kommer på overnattingsbesøk, finner du all informasjon om alle mulige transportmidler til meg på sidene under. </p>
