--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,6 +7,8 @@
 
 {{ define "footer" }}
 <p>
-  Sist oppdatert {{ .Date }}. Nettsiden er utviklet av Stig Johan Berggren. Innhold lisensiert under CC. <a href="../../om">Les mer</a>.
+   Denne siden ble sist oppdatert {{ .Date }}. <br>
+   Innhold av Petter Holstad. Nettsiden er utviklet av <a href="https://stigjohan.no" target="_blank">Stig Johan Berggren</a>. <br>
+   <a href="../../om">Sidekart</a> • <a href="../../om">Personvernserklæring</a> • <a href="../../om#lisens">Lisens</a> • <a href="../../om">Om pdog.no</a>
 </p>
 {{ end }}
