--- a/layouts/shortcodes/toc-accept.html
+++ b/layouts/shortcodes/toc-accept.html
@@ -1,26 +1,21 @@
-<button type="button" class="btn btn-danger">
-  <a class="btn btn-link text-white" data-toggle="collapse" href="#ja" role="button" aria-expanded="false" aria-controls="ja">
-    Jeg er <b>ENIG</b> betingelsene over.
+<p>
+  <a class="btn btn-primary text-white bg-danger btn-link" data-toggle="collapse" href="#ja" role="button" aria-expanded="false" aria-controls="ja">
+    Jeg er <b>ENIG</b> vilkårene over.
   </a>
+</p>
 <div class="collapse" id="ja">
-  <div class="card card-body bg-danger">
-    <p>Nettverksnavn (SSID): *pdog.no/wifi*</p>
-    <p>Passordet finner du på en plakat i stua, til høyre for balkongdøra.
-    Følg normale rettskrivingsregler med stor forbokstav ved setningens start.</p>
+  <div class="card card-body">
+    <p>Nettverksnavn (SSID):</b> pdog.no/wifi</p>
+    <p>Passordet finner du på en plakat i stua, til høyre for balkongdøra. Følg normale rettskrivingsregler med stor forbokstav ved setningens start.</p>
 </div>
 </div>
-</button>
-
-<br>
-<br>
-
-<button type="button" class="btn btn-success">
-  <a class="btn btn-link text-white" data-toggle="collapse" href="#nei" role="button" aria-expanded="false" aria-controls="nei">
-    Jeg er <b>UENIG</b> betingelsene over.
-    </a>
-<div class="collapse" id="nei">
-  <div class="card card-body bg-success">
-<p>Beklager, men du kan ikke koble deg på nettet. Bruk mobildata.</p>
+<p>
+  <a class="btn btn-primary text-white bg-success btn-link" data-toggle="collapse" href="#njet" role="button" aria-expanded="false" aria-controls="njet">
+    Jeg er <b>UENIG</b> vilkårene over.
+  </a>
+</p>
+<div class="collapse" id="njet">
+  <div class="card card-body">
+<p>Beklager, men du kan ikke koble deg på nettet.</p>
 </div>
 </div>
-</button>
