--- a/layouts/shortcodes/toc-accept.html
+++ b/layouts/shortcodes/toc-accept.html
@@ -5,7 +5,7 @@
 </p>
 <div class="collapse" id="ja">
   <div class="card card-body">
-    <p>Nettverksnavn (SSID):</b> pdog.no/wifi</p>
+    <p>Nettverksnavn (SSID): pdog.no/wifi</p>
     <p>Passordet finner du på en plakat i stua, til høyre for balkongdøra. Følg normale rettskrivingsregler med stor forbokstav ved setningens start.</p>
 </div>
 </div>
