--- a/static/style.css
+++ b/static/style.css
@@ -108,3 +108,15 @@ iframe {
 .callout-warning h4 {
   color: #f0ad4e;
 }
+
+.noPadding
+{
+width:400px;
+height:400px;
+border: 5px solid brown;
+}
+
+.padding
+{
+padding: 0px 50px 0px 50px;
+}
