--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -12,6 +12,8 @@
 
   <link rel="icon" href="/favicon.png">
   <link href="/style.css" rel="stylesheet">
+  
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
 
   <script src="https://kit.fontawesome.com/72ae453d62.js" crossorigin="anonymous"></script>
 
