Tekniske korrigeringer på img-caption-link

--- a/layouts/shortcodes/img-caption-link.html
+++ b/layouts/shortcodes/img-caption-link.html
@@ -6,11 +6,12 @@
     class="{{ .Get "class" }}"
     src="{{ .Get "src" }}"
     alt="{{ .Get "alt" }}"
+    float:right;
 />
 
 </a>
 
 <figcaption
-  class="figure-caption"><a href="{{ .Get "link" }}" target="_blank">{{ .Get "img-caption" }}</a>
+  class="figure-caption">{{ .Get "img-caption" }}
 </figcaption>
 </figure>
