Liten redaksjonell endring på flybusser

--- a/layouts/shortcodes/holdeplasser.html
+++ b/layouts/shortcodes/holdeplasser.html
@@ -52,7 +52,7 @@
       </td>
     </tr>
     <tr>
-      <td><b>Københavngata</b> (1,4 km) er nærmeste holdeplass for Flybussen. Anbefaler å korrespondere med 20-bussen opp til Arendalsgata eller Torshov.</td>
+      <td><b>Københavngata</b> (1,4 km) er nærmeste holdeplass for Flybussen. Anbefaler å korrespondere med 20-bussen opp til Arendalsgata eller Torshov. Flybussen er innstilt pga. covid-19. </td>
       <td>
         <div class="d-flex flex-wrap">
           {{ partial "rute.html" (dict "routeNo" "20" "routeType" "bybuss") }}
