Oppdaterer bareegil-shortcode

--- a/layouts/shortcodes/bareegil.html
+++ b/layouts/shortcodes/bareegil.html
@@ -1,3 +1,4 @@
+<p><h3>Apple Music</h3>
 <iframe
     allow="autoplay *; encrypted-media *;"
     height="150"
@@ -6,3 +7,22 @@
     src="https://embed.music.apple.com/us/album/ved-r%C3%B8rende-norske-rett-skrivnings-regler/1090475484?i=1090475487"
 >
 </iframe>
+</p>
+
+<hr>
+
+<p><h3>Spotify</h3>
+<iframe src="https://open.spotify.com/embed/track/5CHlxX0gXOw5sgp0gOITxL" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+</p>
+
+<hr>
+
+<p><h3>YouTube: nyinnspilt versjon</h3>
+<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/5kx1p7CHsPk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</p>
+
+<hr>
+
+<p><h3>YouTube: albumversjon</h3>
+<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/NcoEUOzIJdE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</p>
