--- a/layouts/shortcodes/kontaktinfo.html
+++ b/layouts/shortcodes/kontaktinfo.html
@@ -19,34 +19,18 @@ function copyToClipboard(element) {
     <tbody>
       <tr>
         <td>Airbnb</td>
-        <td><a href="https://www.airbnb.no/users/show/4466713" target="_blank" rel="noreferrer noopener">Petter</a></td>
+        <td><a href="https://www.airbnb.no/users/show/4466713">Petter <sup><i class="fas fa-external-link-alt"></i></sup></a></td>
       </tr>
       <tr>
         <td>Apple Music</td>
-        <td><a href="https://music.apple.com/profile/petterholstad" target="_blank" rel="noreferrer noopener">petterhol</a></td>
+        <td><a href="https://music.apple.com/profile/petterholstad">petterhol <sup><i class="fas fa-external-link-alt"></i></sup></a></td>
       </tr>
 
       <tr>
         <td>Beer With Me</td>
         <td><a href="https://open.beerwithme.se/#addfriend?email=u2231084@beerwithme.se&name=Petterus"
-            target="_blank" rel="noreferrer noopener">petterhol</a></td>
+           >petterhol <sup><i class="fas fa-external-link-alt"></i></sup></a></td>
       </tr>
-      
-     <tr>
-        <td>Clubhouse</td>
-
-<td><text id="clubhouse">
-<div style="display:none;">
-petterhol
-</div></text>
-<a href="https://www.joinclubhouse.com/@petterhol"
-            target="_blank" rel="noreferrer noopener">@petterhol</a>
-<button 
-class="btn badge badge-light" 
-onclick="copyToClipboard('#clubhouse')">
-Kopier</button></td>
-      </tr>
-    
       <tr>
         <td>Digipost</td>
         <td><text id="DIGIPOST"><div style="display:none;">petter.holstad#0D8M</div></text>petter.holstad#0D8M <button class="btn badge badge-light" onclick="copyToClipboard('#DIGIPOST')">Kopier</button></td>
@@ -64,7 +48,7 @@ onclick="copyToClipboard('#EMAIL')">
 Kopier</button></td>      </tr>
       <tr>
         <td>Finn.no</td>
-        <td><a href="https://www.finn.no/user/profile/profile.html?id-287595302">Petter Holstad</a></td>
+        <td><a href="https://www.finn.no/user/profile/profile.html?id-287595302">Petter Holstad  <sup><i class="fas fa-external-link-alt"></i></sup></a></td>
       </tr>
       <tr>
         <td>Facebook Messenger</td>
@@ -77,7 +61,7 @@ Kopier</button></td>      </tr>
       <div style="display:none;">
       petterhol
       </div></div>
-      <a href="https://github.com/petterhol" target="_blank">@petterhol</a>
+      <a href="https://github.com/petterhol">@petterhol <sup><i class="fas fa-external-link-alt"></i></sup></a>
       <button
       class="btn badge badge-light"
       onclick="copyToClipboard('#github')">
@@ -112,7 +96,7 @@ Kopier</button></td>
 <div style="display:none;">
 	petterhol
 </div></text>
-	@petterhol 
+	<a href="https://www.instagram.com/petterhol/">@petterhol <sup><i class="fas fa-external-link-alt"></i></sup></a>
 <button 
 class="btn badge badge-light" 
 onclick="copyToClipboard('#instagram')">
@@ -124,7 +108,7 @@ Kopier</button></td>      </tr>
 <div style="display:none;">
 petterhol
 </div></text>
-<a href="https://www.paypal.com/paypalme/petterhol?locale.x=no_NO" target="_blank">@petterhol</a>
+<a href="https://www.paypal.com/paypalme/petterhol?locale.x=no_NO">@petterhol <sup><i class="fas fa-external-link-alt"></i></sup></a>
 <button 
 class="btn badge badge-light" 
 onclick="copyToClipboard('#PayPal')">
@@ -146,7 +130,7 @@ Kopier</button></td>
       </tr>
       <tr>
         <td>Skatteetaten</td>
-        <td><a href="https://catsnthing.com/PUVGEB">Gå til siste skattemelding</a></td>
+        <td><a href="https://catsnthing.com/PUVGEB">Gå til siste skattemelding <sup><i class="fas fa-external-link-alt"></i></sup></a></td>
       </tr>
       <tr>
         <td>Skype</td>
@@ -172,7 +156,7 @@ onclick="copyToClipboard('#telefonnummer')">
 Kopier</button></td>
       </tr>
       <tr>
-        <td>Postadresse for fysiske brev</td>
+        <td>Postadresse <br>(brev, pakker)</td>
 <td><text id="adresse">
 <div style="display:none;">
 	Ivan Bjørndals gate 6, 0472 Oslo
@@ -188,21 +172,10 @@ Kopier</button></td>      </tr>
 <div style="display:none;">
 	+4792696496
 </div></text>
-<a href="https://qr.vipps.no/28/2/01/031/4792696496?v=1">+47&nbsp;926&nbsp;96&nbsp;496</a>
+<a href="https://qr.vipps.no/28/2/01/031/4792696496?v=1">+47&nbsp;926&nbsp;96&nbsp;496 <sup><i class="fas fa-external-link-alt"></i></sup></a>
 <button 
 class="btn badge badge-light" 
 onclick="copyToClipboard('#vipps')">
-Kopier</button></td></td>
-      </tr>
-      <tr>
-        <td>WhatsApp</td>
-<td><text id="WhatsApp">
-<div style="display:none;">
-	+4792696496
-</div></text>
-<a href="https://wa.me/qr/6DGSHLESPCYCB1">+47&nbsp;926&nbsp;96&nbsp;496</a><button 
-class="btn badge badge-light" 
-onclick="copyToClipboard('#WhatsApp')">
 Kopier</button></td></td>
       </tr>
       <tr>
