Diverse redaksjonelle endringer

--- a/layouts/shortcodes/img-caption.html
+++ b/layouts/shortcodes/img-caption.html
@@ -7,6 +7,6 @@
 />
 
 <figcaption
-  class="figure-caption"><a href="{{ .Get "link" }}" target="_blank">{{ .Get "img-caption" }}</a>
+  class="figure-caption">{{ .Get "img-caption" }}
 </figcaption>
 </figure>
