Diverse endringer og oppdateringer jeg ikke har sjans til å forklare

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -37,6 +37,7 @@
   </header>
   <br><br><br><br>
   <main class="col-md-9 col-xl-8 py-md-3 pl-md-5 bd-content">
+</nav>
     {{ with .Title }}
       <h1>{{ . }}</h1>
     {{ end }}
