Enda noen sider

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,8 +7,7 @@
 
 {{ define "footer" }}
 <p>
-   Denne siden ble sist oppdatert {{ .Date }}. <br>
-   Innhold av Petter Holstad. Nettsiden er utviklet av <a href="https://stigjohan.no" target="_blank">Stig Johan Berggren</a>. <br>
+Nettsiden er utviklet av <a href="https://stigjohan.no" target="_blank">Stig Johan Berggren</a> og Petter Holstad. <br>
    <a href="../../om">Sidekart</a> • <a href="../../om">Personvernserklæring</a> • <a href="../../om#lisens">Lisens</a> • <a href="../../om">Om pdog.no</a>
 </p>
 {{ end }}
