--- a/layouts/shortcodes/haibike-karusell.html
+++ b/layouts/shortcodes/haibike-karusell.html
@@ -4,6 +4,7 @@
     <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
     <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
     <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
+    <li data-target="#carouselExampleCaptions" data-slide-to="4"></li>
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
@@ -30,6 +31,14 @@
         <p>Utenfor Coop Obs! Alnabru, hvor jeg nettopp har vært på storhandel.</p>
       </div>
     </div>
+    <div class="carousel-item">
+      <img src="karusell 5.jpg" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <p>Ram Mount</p>
+      </div>
+    </div>
+
+
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
