--- a/layouts/shortcodes/confirmation-code.html
+++ b/layouts/shortcodes/confirmation-code.html
@@ -4,19 +4,16 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <title>Confirmation code</title>
 </head>
 
 <body>
-  <center>
-    <h1 id="target">Loading time ...</h1>
-    <h2 id="prev-target"></h2>
-  </center>
+<hr>
+    <h1 id="target">Laster inn ...</h1>
+    <h2 id="prev-target">Hvis det ikke skjer noe på noen sekunder,<br>har du sannsynligvis ikke internett lengre.</h2>
   <script type="text/javascript">
     const target = document.getElementById("target");
     const prevTarget = document.getElementById("prev-target");
-    const interval = 60;
+    const interval = 30;
 
     fetch("https://worldtimeapi.org/api/timezone/Etc/UTC")
       .then(res => res.json())
@@ -24,11 +21,12 @@
         const secondsSinceEpoch = res.unixtime;
         const code = Math.floor(secondsSinceEpoch / interval) * 7919357;
         const prevCode = Math.floor(secondsSinceEpoch / interval - 1) * 7919357;
-        target.innerHTML = code.toString().slice(-6);
-        prevTarget.innerHTML = "Previous value: " + prevCode.toString().slice(-6);
+        target.innerHTML = "Nåværende kode: " + code.toString().slice(-6);
+        prevTarget.innerHTML = "Forrige kode: " + prevCode.toString().slice(-6);
       })
-      .catch(() => target.innerHTML = "ERROR");
+      .catch(() => target.innerHTML = "Du har ikke internett");
   </script>
+<hr>
 </body>
 
 </html>
