--- a/layouts/shortcodes/img-caption.html
+++ b/layouts/shortcodes/img-caption.html
@@ -4,6 +4,7 @@
     class="{{ .Get "class" }}"
     src="{{ .Get "src" }}"
     alt="{{ .Get "alt" }}"
+    width="{{ .Get "width" }}"
 />
 
 <figcaption
