--- a/layouts/shortcodes/knapp-kontaktinfo.html
+++ b/layouts/shortcodes/knapp-kontaktinfo.html
@@ -1,1 +1,1 @@
-<a href="../kontaktinfo" class="btn btn-primary btn-sm">Se fullstendig kontaktinfo</a>
+<a href="../kontaktinfo" class="btn btn-dark btn-lg">Kontaktinformasjon</a>
