Oppdaterer img-shortcode for flere funksjoner

--- a/layouts/shortcodes/img.html
+++ b/layouts/shortcodes/img.html
@@ -3,4 +3,6 @@
     src="{{ .Get "src" }}"
     alt="{{ .Get "alt" }}"
     width="{{ .Get "width" }}"
+    align="{{ .Get "align" }}"
+    padding="{{ .Get "padding" }}"
 />
