--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -9,6 +9,6 @@
 {{ define "footer" }}
 <p>
 Nettsiden er utviklet av <a href="https://stigjohan.no" target="_blank">Stig Johan Berggren</a> og Petter Holstad. <br>
-   <a href="../../om">Sidekart</a> • <a href="../../om">Personvernserklæring</a> • <a href="../../om#lisens">Lisens</a> • <a href="../../om">Om pdog.no</a>
+<a href="../tilbakemeldinger">Tilbakemeldinger og bidrag</a> • <a href="../lisens">Lisens</a> • <a href="../kontaktinformasjon">Kontaktinformasjon</a>
 </p>
 {{ end }}
